--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.7.2",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6-alpha.6",
+    "express-session": "^1.17.0",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.4",
