--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.4",
-    "xlsjs": "^1.0.1"
+    "xlsjs": "^1.0.1",
+    "xlsx": "^0.15.5"
   }
 }
