--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
+    "node-xlsx": "^0.15.0",
     "nodemon": "^1.19.4",
     "xlsjs": "^1.0.1",
     "xlsx": "^0.15.5"
