--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-flash": "^0.1.1",
     "crypto-js": "^4.0.0",
     "cryptr": "^6.0.2",
+    "download-file": "^0.1.5",
     "ejs": "^2.7.2",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6-alpha.6",
