--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-flash": "^0.1.1",
     "crypto-js": "^4.0.0",
     "cryptr": "^6.0.2",
+    "dotenv": "^8.2.0",
     "download-file": "^0.1.5",
     "ejs": "^2.7.2",
     "express": "^4.17.1",
